# test-package-require

./: OBS.md  README.md
OBS/: prjconf  project-meta.xml
OBS/python-fakeext/: _service
OBS/python-fakepure/: _service
OBS/python-fakerocmapp/: _service
OBS/python-faketorch/: _multibuild  _service
SPECS/python-fakeext/: __init__.py  fakeext.c  python-fakeext.spec
SPECS/python-fakepure/: __init__.py  pyproject.toml  python-fakepure.spec
SPECS/python-fakerocmapp/: __init__.py  python-fakerocmapp.spec
SPECS/python-faketorch/: __init__.py  faketorch.c  pyproject.toml  python-faketorch.spec
scripts/: build-local.sh  resolve-matrix.sh  setup-obs.sh
