# SPDX-FileCopyrightText: (C) 2026 Institute of Software, Chinese Academy of Sciences (ISCAS)
# SPDX-FileCopyrightText: (C) 2026 openRuyi Project Contributors
# SPDX-FileContributor: CHEN Xuan <chenxuan@iscas.ac.cn>
#
# SPDX-License-Identifier: MulanPSL-2.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fakepure"
version = "1.0.0"
description = "Pure-Python torch consumer stand-in"
# The version bound is deliberate: it is what makes a hand-written shim's
# hardcoded Version drift-sensitive.
dependencies = ["faketorch>=2.0"]

[tool.setuptools]
packages = ["fakepure"]
